@startuml

class AlgoThief {
    + AlgoThief(fuenteDeDatos)
    + generarEscenario(builder)
    + asignarPolicia(contadorDeDificultad)
    + visitar(nombreEdificio)
    + viajar(nombreCiudad)
    + recibirHeridaDeCuchillo()
    + recibirHeridaPorArmaDeFuego()
    + dormir()
    + cargarDatosSospechoso(descripcionSospechoso)
    + buscarSospechosos() : List<String>
    + emitirOrdenDeArresto(nombre)
    + atraparSospechoso()
    + pistaMasReciente() : String
    + juegoAcabado() : boolean
    + juegoTerminado() : boolean
}

AlgoThief "1" --> "1" FuenteDeDatos
AlgoThief "1" --> "0..1" Escenario
AlgoThief "1" --> "0..1" Pista
AlgoThief "1" --> "0..1" ContadorDeDificultad
AlgoThief "1" --> "0..1" DescripcionSospechoso
AlgoThief "1" --> "0..1" Cronometro
AlgoThief ..> EscenarioBuilder

interface EscenarioBuilder
interface FuenteDeDatos

@enduml
